# superchain-client

./: Cargo.toml
examples/: get-evm-events.rs  get-pairs-http.rs  get-pairs-ws.rs  get-prices-http.rs  get-prices-ws.rs  get-reserves-http.rs  get-reserves-ws.rs  get-trades-ws.rs  get-trades.rs
src/: error.rs  http.rs  lib.rs  types.rs  ws.rs
