[package]
name = "superchain-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.3.2"
csv-async = "1.2.4"
ethers = "1.0.0"
futures = "0.3.25"
reqwest = { version = "0.11.12", features = ["stream"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_repr = "0.1.9"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["macros", "sync"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
tungstenite = "0.17.3"
url = "2.3.1"
dotenv = "0.15.0"
base64 = "0.13.1"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=docsrs"]
